--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <span class="primary">OUTDOORS</span>
           <span class="sub">IS WHERE LIFE HAPPENS</span>
         </h1>
+        <a href="#" class="btn btn-white btn-animate">Discover our tours</a>
       </div>
     </header>
   </body>
