--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
         <a href="#" class="btn btn-white btn-animate">Discover our tours</a>
       </div>
     </header>
+
+    <main>
+      <section class="section-about">
+        <div class="text-center mb-8">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">Text</div>
+          <div class="col-1-of-2">Image</div>
+        </div>
+      </section>
+    </main>
+
     <!-- test grid  -->
     <!--
       <section>
