feat: left text section

--- a/index.html
+++ b/index.html
@@ -28,13 +28,32 @@
 
     <main>
       <section class="section-about">
-        <div class="text-center mb-8">
+        <div class="text-center mb-lg">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
         <div class="row">
-          <div class="col-1-of-2">Text</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary mb-sm">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio
+              maiores dolor atque ipsum saepe quae neque unde quas officiis quis
+              facilis placeat ducimus, vero velit assumenda possimus fuga sequi
+              laudantium.
+            </p>
+            <h3 class="heading-tertiary mb-sm">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio
+              maiores dolor atque ipsum saepe quae neque unde quas officiis quis
+              facilis placeat duci
+            </p>
+            <a href="#" class="btn-text mt-md">Learn More &rarr;</a>
+          </div>
           <div class="col-1-of-2">Image</div>
         </div>
       </section>
