--- a/index.html
+++ b/index.html
@@ -54,7 +54,25 @@
             </p>
             <a href="#" class="btn-text mt-md">Learn More &rarr;</a>
           </div>
-          <div class="col-1-of-2">Image</div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="Image 1"
+                class="composition__image composition__image--p1"
+              />
+              <img
+                src="img/nat-2-large.jpg"
+                alt="Image 2"
+                class="composition__image composition__image--p2"
+              />
+              <img
+                src="img/nat-3-large.jpg"
+                alt="Image 3"
+                class="composition__image composition__image--p3"
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
