--- a/index.html
+++ b/index.html
@@ -75,6 +75,50 @@
           </div>
         </div>
       </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary mb-sm">Explore the world</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                cupiditate officiis quis aspernatur itaque ipsum ex fugit.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary mb-sm">Meet Nature</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                cupiditate officiis quis aspernatur itaque ipsum ex fugit.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary mb-sm">Find your way</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                cupiditate officiis quis aspernatur itaque ipsum ex fugit.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary mb-sm">Live a healthier Life</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                cupiditate officiis quis aspernatur itaque ipsum ex fugit.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- test grid  -->
