--- a/index.html
+++ b/index.html
@@ -145,26 +145,73 @@
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
-                BACK
+                <div class="card__cta">
+                  <div class="card__cta--only">ONLY</div>
+                  <div class="card__cta--price">₹10000</div>
+                  <a href="#" class="btn btn-white mt-md">Book Now</a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-1-of-3">
             <div class="card">
-              <div class="card__side card__side--front">FRONT</div>
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--2"></div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2"
+                    >The Forest Hiker</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tours</li>
+                    <li>Upto 40 people</li>
+                    <li>4 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: medium</li>
+                  </ul>
+                </div>
+              </div>
               <div class="card__side card__side--back card__side--back-2">
-                BACK
+                <div class="card__cta">
+                  <div class="card__cta--only">ONLY</div>
+                  <div class="card__cta--price">₹20000</div>
+                  <a href="#" class="btn btn-white mt-md">Book Now</a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-1-of-3">
             <div class="card">
-              <div class="card__side card__side--front">FRONT</div>
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--3"></div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3"
+                    >The Snow Adventurer</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>5 day tours</li>
+                    <li>Upto 20 people</li>
+                    <li>3 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: hard</li>
+                  </ul>
+                </div>
+              </div>
               <div class="card__side card__side--back card__side--back-3">
-                BACK
+                <div class="card__cta">
+                  <div class="card__cta--only">ONLY</div>
+                  <div class="card__cta--price">₹40000</div>
+                  <a href="#" class="btn btn-white mt-md">Book Now</a>
+                </div>
               </div>
             </div>
           </div>
+        </div>
+        <div class="text-center mt-lg">
+          <a href="#" class="btn btn-primary">Discover all tours</a>
         </div>
       </section>
     </main>
