--- a/index.html
+++ b/index.html
@@ -214,6 +214,34 @@
           <a href="#" class="btn btn-primary">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="text-center mb-lg">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="happy people testimonial"
+                class="story__img"
+              />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary mb-sm">
+                I had the best week ever with my family
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio
+                maiores dolor atque ipsum saepe quae neque unde quas officiis
+                quis facilis placeat ducimus, vero velit assumenda possimus fuga
+                sequi laudantium.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- test grid  -->
