feat: story animations

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                 alt="happy people testimonial"
                 class="story__img"
               />
+              <figcaption class="story__caption">Mary Jane</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary mb-sm">
@@ -240,6 +241,32 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="happy people testimonial 2"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Peter Parker</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary mb-sm">
+                WOW! MY LIFE IS COMPLETELY DIFFERENT NOW
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio
+                maiores dolor atque ipsum saepe quae neque unde quas officiis
+                quis facilis placeat ducimus, vero velit assumenda possimus fuga
+                sequi laudantium.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-lg">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
