--- a/index.html
+++ b/index.html
@@ -216,6 +216,13 @@
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Video playback not supported
+          </video>
+        </div>
         <div class="text-center mb-lg">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
