feat: booking section

--- a/index.html
+++ b/index.html
@@ -276,6 +276,38 @@
           <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
+
+      <section class="section-booking">
+        <div class="row">
+          <div class="booking">
+            <form action="#" class="booking__form">
+              <div class="mb-sm">
+                <h2 class="heading-secondary">
+                  Start booking now
+                </h2>
+                <div class="form__group">
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Full name"
+                    id="name"
+                  />
+                  <label for="name" class="form__label">Full Name</label>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="email"
+                    class="form__input"
+                    placeholder="Email address"
+                    id="email"
+                  />
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- test grid  -->
