feat: form input

--- a/index.html
+++ b/index.html
@@ -282,27 +282,26 @@
           <div class="booking">
             <form action="#" class="booking__form">
               <div class="mb-sm">
-                <h2 class="heading-secondary">
-                  Start booking now
-                </h2>
-                <div class="form__group">
-                  <input
-                    type="text"
-                    class="form__input"
-                    placeholder="Full name"
-                    id="name"
-                  />
-                  <label for="name" class="form__label">Full Name</label>
-                </div>
-                <div class="form__group">
-                  <input
-                    type="email"
-                    class="form__input"
-                    placeholder="Email address"
-                    id="email"
-                  />
-                  <label for="email" class="form__label">Email address</label>
-                </div>
+                <h2 class="heading-secondary">Start booking now</h2>
+              </div>
+              <div class="form__group">
+                <input
+                  type="text"
+                  class="form__input"
+                  placeholder="Full name"
+                  id="name"
+                  required
+                />
+                <label for="name" class="form__label">Full name</label>
+              </div>
+              <div class="form__group">
+                <input
+                  type="email"
+                  class="form__input"
+                  placeholder="Email address"
+                  id="email"
+                />
+                <label for="email" class="form__label">Email address</label>
               </div>
             </form>
           </div>
